    hardcode a proper 'use lib' statement anyway. This fixes a gotcha,
    since PERL5LIB won't work once ikiwiki is running via a wrapper or as
    a cgi.
  * orphans: As a special case, the toplevel index page is never considered
    an orphaned page.
  * inline: Display a message if the 'pages' parameter is missing, before
    it just expanded to nothing.

 -- Joey Hess <joeyh@debian.org>  Tue, 13 May 2008 12:30:18 -0400

ikiwiki (2.46) unstable; urgency=low

  * amazon_s3: New plugin, which injects wiki pages into Amazon S3, allowing
    ikiwiki to be used without a dedicated web server.
  * aggregate: Add support for web-based triggering of aggregation 
    for people stuck on shared hosting without cron. (Sheesh.) Enabled
    via the `aggregate_webtrigger` configuration optiom.
  * Add pinger and pingee plugins, which allow setting up mirrors and branched
    wikis that automatically ping one another to stay up to date.
  * Optimised file statting code when scanning for modified pages;
    cut the number of system calls in half. (Still room for improvement.)
  * Fixes for behavior changes in perl 5.10's CGI that broke utf-8 support
    in several interesting ways.

 -- Joey Hess <joeyh@debian.org>  Mon, 12 May 2008 20:51:50 -0400

ikiwiki (2.45) unstable; urgency=low

  * toc: Add the table of contents at sanitize time, rather than at format
    time. This allows the toc to be displayed when previewing an edit. It also
    avoids headers in the page template from showing up in the toc.
  * Add PREFIX/bin to the hardcoded PATH within ikiwiki.
  * Deal with different paths to perl when removing -T flag.
  * Add missing de.po. Closes: #471540
  * img: Support a title attribute, will be passed through to html.
    Closes: #478718
  * anonk: Add anonok_pagespec configuration setting that can be used to
    allow anonymous users to edit only matching pages. Closes: #478892
  * Fix ugly display when editing a page that has vanished.