@@ -9,6 +9,8 @@ ikiwiki (2.47) UNRELEASED; urgency=low
     an orphaned page.
   * inline: Display a message if the 'pages' parameter is missing, before
     it just expanded to nothing.
+  * git: Skip over signed-off-by and similar lines in commit messages
+    when generating recentchanges.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 13 May 2008 12:30:18 -0400
 
